[package]
name = "rkubctl"
version = "0.1.0"
authors = ["luyi666 <ly921225@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"

[[bin]]
name = "kbl"
path = "src/main.rs"