[package]
name = "rkubectl"
version = "0.1.0"
authors = ["luyi666 <ly921225@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.31"
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
log = "0.4.14"
itertools = "0.10.0"
str-distance = "0.1.0"
regex = "1.3.5"

[[bin]]
name = "rkl"
path = "src/main.rs"